--- a/JavaModule05/pom.xml
+++ b/JavaModule05/pom.xml
@@ -19,6 +19,10 @@
       <artifactId>postgresql</artifactId>
       <version>42.7.2</version>
     </dependency>
-
+    <dependency>
+      <groupId>jakarta.persistence</groupId>
+      <artifactId>jakarta.persistence-api</artifactId>
+      <version>3.2.0-M2</version>
+    </dependency>
   </dependencies>
 </project>
