--- a/JavaModule05/pom.xml
+++ b/JavaModule05/pom.xml
@@ -20,9 +20,15 @@
       <version>42.7.2</version>
     </dependency>
     <dependency>
+      <groupId>org.hibernate.orm</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>6.4.4.Final</version>
+    </dependency>
+    <dependency>
       <groupId>jakarta.persistence</groupId>
       <artifactId>jakarta.persistence-api</artifactId>
-      <version>3.2.0-M2</version>
+      <version>3.1.0</version>
     </dependency>
+
   </dependencies>
 </project>
