work in progress project 8

--- a/JavaModule08/pom.xml
+++ b/JavaModule08/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.website</groupId>
     <artifactId>JavaModule08</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
@@ -40,6 +41,15 @@
                     <source>23</source>
                     <target>23</target>
                     <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version> <!-- Убедитесь, что указана актуальная версия плагина -->
+                <configuration>
+                    <warSourceDirectory>src/main/webapp</warSourceDirectory>
+                    <failOnMissingWebXml>false</failOnMissingWebXml> <!-- Если используете Servlet 3.0, web.xml не обязателен -->
                 </configuration>
             </plugin>
         </plugins>
