--- a/JavaModule08/pom.xml
+++ b/JavaModule08/pom.xml
@@ -31,6 +31,11 @@
             <version>2.3.3</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-catalina</artifactId>
+            <version>11.0.1</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
