Добавлял Create-методы дял продуктов, категорий и параметров

--- a/JavaModule11/src/main/resources/application-prod.yml
+++ b/JavaModule11/src/main/resources/application-prod.yml
@@ -10,6 +10,12 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: false
 
+    properties:
+      hibernate:
+        jdbc:
+          batch_size: 100000
+        order_inserts: true
+
 logging:
   level:
     org.springframework.web: INFO
